# simaple

./: .editorconfig  .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.en.md  README.md  extract_template.py  launcher.py  pyproject.toml  skill_template.yaml
.github/workflows/: main.yml
apptests/: conftest.py  record.tsv  test_override.py  test_use_and_elapse.py
apptests/application/: conftest.py  test_command.py  test_query.py
development/: 000-component.md  001-component-id.md  event.md  readme.md
development/adr/: 001-dot-damage.md  002-component-unit-test.md  003-passive-and-active-skill.md
docs/: conf.py  index.rst
docs/modules/: baseline.rst  benchmark.rst  core.rst  examples.rst  fetch.rst  gear.rst  metric.rst  preset.rst  simulate.rst  simulate_en.rst
plans/: 30s
plans/30s/: adele.result.simaple  adele.simaple  archmagefb.result.simaple  archmagefb.simaple  archmagetc.result.simaple  archmagetc.simaple  bishop.result.simaple  bishop.simaple  mechanic.result.simaple  mechanic.simaple  windbreaker.result.simaple  windbreaker.simaple
refs/: chuchu_characters.yaml  crawl_chuchu.py  extract_template.py  gen.py  prompt.md  ref_ids.yaml  skill_info.yaml
refs/characters/: adele.yaml  angelicbuster.yaml  aran.yaml  archmagefb.yaml  archmagetc.yaml  ark.yaml  battlemage.yaml  bishop.yaml  blaster.yaml  bowmaster.yaml  buccaneer.yaml  cadena.yaml  cannoneer.yaml  corsair.yaml  darkknight.yaml  demonavenger.yaml  demonslayer.yaml  dualblade.yaml  eunwol.yaml  evan.yaml  flamewizard.yaml  hero.yaml  hoyoung.yaml  illium.yaml  kain.yaml  kaiser.yaml  khali.yaml  kinesis.yaml  lara.yaml  luminous.yaml  mechanic.yaml  mercedes.yaml  mihile.yaml  nightlord.yaml  nightwalker.yaml  paladin.yaml  pathfinder.yaml  phantom.yaml  shadower.yaml  sniper.yaml  (+6 more)
refs/skill_status/: adele.yaml  angelicbuster.yaml  aran.yaml  archmagefb.yaml  archmagetc.yaml  ark.yaml  battlemage.yaml  bishop.yaml  blaster.yaml  bowmaster.yaml  buccaneer.yaml  cadena.yaml  cannoneer.yaml  corsair.yaml  darkknight.yaml  demonavenger.yaml  demonslayer.yaml  dualblade.yaml  eunwol.yaml  evan.yaml  flamewizard.yaml  hero.yaml  hoyoung.yaml  illium.yaml  kain.yaml  kaiser.yaml  khali.yaml  kinesis.yaml  lara.yaml  luminous.yaml  mechanic.yaml  mercedes.yaml  mihile.yaml  nightlord.yaml  nightwalker.yaml  paladin.yaml  pathfinder.yaml  phantom.yaml  shadower.yaml  sniper.yaml  (+6 more)
refs/skill_template/: adele.yaml  angelicbuster.yaml  aran.yaml  archmagefb.yaml  archmagetc.yaml  ark.yaml  battlemage.yaml  bishop.yaml  blaster.yaml  bowmaster.yaml  buccaneer.yaml  cadena.yaml  cannoneer.yaml  corsair.yaml  darkknight.yaml  demonavenger.yaml  demonslayer.yaml  dualblade.yaml  eunwol.yaml  evan.yaml  flamewizard.yaml  hero.yaml  hoyoung.yaml  illium.yaml  kain.yaml  kaiser.yaml  khali.yaml  kinesis.yaml  lara.yaml  luminous.yaml  mechanic.yaml  mercedes.yaml  mihile.yaml  nightlord.yaml  nightwalker.yaml  paladin.yaml  pathfinder.yaml  phantom.yaml  shadower.yaml  sniper.yaml  (+6 more)
scripts/: agent.py  debug.py  rank.py  repl.py  show_dpm.py  simulate.py
simaple/: hyperstat.py  link.py  resource.py  union.py  util.py
simaple/api/: __init__.py  base.py  dev.py  examples.py  prod.py
simaple/app/: web.py
simaple/benchmark/: base.py  gearset_blueprint.py  interpreter.py  readme.md
simaple/character/: character.py  passive_skill.py  readme.md
simaple/container/: api_environment_provider.py  cache.py  character_provider.py  environment_provider.py  memoizer.py  plan_metadata.py  simulation.py
simaple/core/: __init__.py  _gear.py  base.py  damage.py  gear.py  job_category.py  jobtype.py  skill.py
simaple/data/: __init__.py  patch.py
simaple/fetch/: __init__.py  base.py  cookie.py  item.py  query.py  token.py
simaple/gear/: arcane_symbol.py  authentic_symbol.py  blueprint.py  bonus_factory.py  builder.py  gear.py  gear_repository.py  gear_type.py  gearset.py  potential.py  setitem.py  slot_name.py  symbol_gear.py  util.py
simaple/http/: dev.py
simaple/job/: description.py  job.py  passive_skill.py  static_property.py
simaple/metric/: metric.py
simaple/optimizer/: __init__.py  hyperstat_optimizer.py  link_optimizer.py  optimizer.py  preset.py  step_iterator.py  union_occupation_optimizer.py  union_optimizer.py  weapon_potential_optimizer.py
simaple/preset/: base.py
simaple/request/: environment_provider.py
simaple/simulate/: actor.py  base.py  builder.py  engine.py  event.py  global_property.py  kms.py  profile.py  readme.md  reducer.py  report.py  reserved_names.py  stateful_dispatcher.py  timer.py  usecase.py  util.py  view.py
simaple/spec/: _math.py  interpreter.py  loadable.py  loader.py  patch.py  readme.md  repository.py  spec.py
simaple/system/: __init__.py  ability.py  artifact.py  artifact_distribution.yaml  base.py  hexa_stat.py  hyperstat.py  link.py  optimal_artifact.py  propensity.py  trait.py  union.py
simaple/wasm/: __init__.py  base.py  examples.py  globals.py  skill.py  workspace.py
test_app/: conftest.py  saved_record.tsv  test_baseline_workspace.py  test_create_workspace.py  test_full_log_query.py  test_latest_log.py  test_override.py  test_play.py  test_rollback.py  test_snapshot.py  test_statistics.py
test_app/application/: checkpoint.json  conftest.py  test_command.py  test_query.py
test_app/domain/: conftest.py  test_plan.py  test_simulator.py  test_snapshot.py
test_app/interface/: test_run_plan.py
test_app/wasm/: conftest.py  test_skill.py  test_wasm.py  test_workspace.py
test_data/: .cache.simaple.json  .memo.simaple.json  target.py  test_container_runtime.py
test_data/asset/: adele.simaple  archmagefb.simaple  bishop.simaple  (+5 more)
tests/: test_hyperstat.py  test_iterator.py  test_link.py  test_optimizer.py  test_union.py  test_union_occupation.py  test_util.py
tools/: item_option_to_table.py
website/: .gitignore  .yarnrc.yml  next.config.mjs  package.json
webui/: .eslintrc.cjs  .gitignore  .yarnrc.yml  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
(+1065 files in other folders)
